--- a/Lab11_Express/package.json
+++ b/Lab11_Express/package.json
@@ -4,7 +4,7 @@
   "description": "Denisse Dominguez Bolaños a01702603",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node servidor.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
