--- a/Lab12_HTMLDinamico/package.json
+++ b/Lab12_HTMLDinamico/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "servidor.js",
   "scripts": {
+    "start": "node servidor.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Denisse Dominguez Bolaños",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.3"
+  }
 }
