--- a/Lab18/package.json
+++ b/Lab18/package.json
@@ -10,6 +10,7 @@
   "author": "Denisse Dominguez Bolaños",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
